# platform_views_camera

./: .gitignore  README.md
camera_view/: README.md
camera_view/.github/workflows/: camera_view.yaml  camera_view_android.yaml  camera_view_ios.yaml  camera_view_macos.yaml  camera_view_platform_interface.yaml  camera_view_windows.yaml  my_plugin_linux.yaml  my_plugin_web.yaml
camera_view/camera_view/: README.md  pubspec.yaml
camera_view/camera_view/example/: README.md  pubspec.yaml
camera_view/camera_view/lib/: camera_view.dart
camera_view/camera_view/test/: camera_view_test.dart
camera_view/camera_view_android/: README.md  pubspec.yaml
camera_view/camera_view_android/android/: build.gradle  settings.gradle
camera_view/camera_view_android/lib/: camera_view_android.dart
camera_view/camera_view_android/test/: camera_view_android_test.dart
camera_view/camera_view_ios/: README.md  pubspec.yaml
camera_view/camera_view_ios/ios/: camera_view_ios.podspec
camera_view/camera_view_linux/: README.md  pubspec.yaml
camera_view/camera_view_macos/: README.md  pubspec.yaml
camera_view/camera_view_platform_interface/: README.md  pubspec.yaml
camera_view/camera_view_web/: README.md  pubspec.yaml
camera_view/camera_view_windows/: README.md  pubspec.yaml
camera_view/camera_view_windows/windows/: CMakeLists.txt  camera_view_windows_plugin.cpp
camera_view/camera_view_windows/windows/include/camera_view_windows/: camera_view_windows.h
example/: .metadata  README.md  detective_connect.txt  pubspec.yaml
example/lib/: main.dart
(+72 files in other folders)
